# avr-postprocess

./: .gitignore  Cargo.toml  hex2bin  install.sh
src/: abi.rs  asm.rs  avr_deviceinfo.rs  dasm.rs  main.rs  optimize.rs  patch.rs  program.rs
src/optimize/: main_prologue.rs
src/patch/: bad_interrupt_exit.rs  main_prologue.rs
